--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ant-design/icons": "^5.4.0",
     "antd": "^5.20.0",
     "autoprefixer": "^10.4.20",
+    "date-fns": "^3.6.0",
+    "path": "^0.12.7",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
